--- a/include/linux/Kbuild
+++ b/include/linux/Kbuild
@@ -19,6 +19,7 @@ header-y += usb/
 header-y += affs_hardblocks.h
 header-y += aio_abi.h
 header-y += arcfb.h
+header-y += ashmem.h
 header-y += atmapi.h
 header-y += atmarp.h
 header-y += atmbr2684.h
@@ -96,6 +97,7 @@ header-y += if_strip.h
 header-y += if_tun.h
 header-y += in_route.h
 header-y += ioctl.h
+header-y += ion.h
 header-y += ip6_tunnel.h
 header-y += ipmi_msgdefs.h
 header-y += ipsec.h
@@ -386,16 +388,27 @@ objhdr-y += version.h
 header-y += wimax.h
 header-y += wimax/
 
+header-y += msm_adsp.h
 header-y += msm_mdp.h
 header-y += msm_kgsl.h
 header-y += msm_q6venc.h
 header-y += msm_q6vdec.h
+header-y += msm_rotator.h
 header-y += msm_vidc_dec.h
 header-y += msm_vidc_enc.h
 header-y += msm_audio.h
 header-y += msm_audio_aac.h
+header-y += msm_audio_acdb.h
 header-y += android_pmem.h
 header-y += fih_hw_info.h
 
+header-y += msm_audio_wma.h
+header-y += msm_audio_wmapro.h
+header-y += msm_audio_mvs.h
+header-y += msm_audio_qcp.h
+header-y += msm_audio_amrnb.h
+header-y += msm_audio_voicememo.h
+header-y += msm_audio_sbc.h
 header-y += genlock.h
+header-y += msm_audio_amrwb.h
 
